WC-567. Web Console: Fix jumping header height.

--- a/modules/web-console/frontend/app/components/web-console-header/style.scss
+++ b/modules/web-console/frontend/app/components/web-console-header/style.scss
@@ -66,7 +66,7 @@ web-console-header {
         align-items: center;
         padding: 18px 30px;
         position: relative;
-        min-height: 81px;
+        height: 81px;
     }
 
     .wch-logo {
